<resources>
    <string name="app_name">CarMinder</string>
    <string name="tire_rotation">Tire Rotation</string>
    <string name="brakes">Brakes</string>
    <string name="tire_change">Tire Change</string>
    <string name="oil_change">Oil Change</string>
    <string name="spark_plugs">Spark Plugs</string>
    <string name="alignment">Alignment</string>
    <string name="todo">TODO</string>
    <string name="logo">Carminder Logo</string>
    <string name="tirestack">Stack of tires</string>
    <string name="rec_mileage">Recommended Mileage: </string>
    <string name="rec_part">Recommended Type: </string>
    <string name="est_cost">Estimated Cost: </string>
    <string name="newCar">New Car</string>
    <string name="my_garage">MY GARAGE</string>

    <string-array name="makes">
        <item>Audi</item>
        <item>Chrysler</item>
        <item>Porsche</item>
        <item>Jaguar</item>
        <item>Honda</item>
        <item>Cadillac</item>
        <item>Suburu</item>
        <item>Mazda</item>
        <item>Jeep</item>
        <item>Ford</item>
        <item>Chevrolet</item>
        <item>Toyota</item>
        <item>BMW</item>
        <item>Nissan</item>
        <item>Volkswagon</item>
        <item>Lincoln</item>
        <item>Tesla</item>
        <item>Maserati</item>
        <item>Fiat</item>
        <item>Kia</item>
        <item>Hyundai</item>
        <item>Acura</item>
        <item>GMC</item>
    </string-array>

    <string-array name="model">
        <item>1500 Club Coupe</item>
        <item>124 Spider</item>
        <item>1 Series</item>
        <item>100</item>
        <item>300M</item>
        <item>300ZX</item>
        <item>323</item>
        <item>350Z</item>
        <item>4 Series</item>
        <item>370Z</item>
        <item>4Runner</item>
        <item>5 Series</item>
        <item>500</item>
        <item>6 Series</item>
        <item>626</item>
        <item>7 Series</item>
        <item>Tacoma</item>
        <item>Corolla</item>
        <item>Civic</item>
        <item>CRV</item>
        <item>Cherokee</item>
        <item>Fusion</item>
        <item>Forte</item>
        <item>Focus</item>
        <item>Prius</item>
        <item>F-150</item>
        <item>Wrangler</item>
        <item>Edge</item>
        <item>Focus</item>
        <item>Galaxy</item>
        <item>Mustang</item>
        <item>Corvette</item>
        <item>Camero</item>
        <item>Taurus</item>
        <item>Sierra</item>
    </string-array>

    <string-array name="year">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>

</resources>