<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".serviceScheduler">

    <Button
        android:id="@+id/alignment"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:onClick="popup"
        android:text="@string/alignment"
        android:textColor="#000000"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tireRotation" />

    <Button
        android:id="@+id/sparkPlugs"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:onClick="popup"
        android:text="@string/spark_plugs"
        android:textColor="#000000"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/tireChange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brakes" />

    <Button
        android:id="@+id/tireRotation"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:onClick="popup"
        android:text="@string/tire_rotation"
        android:textColor="#000000"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/alignment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tireChange" />

    <Button
        android:id="@+id/brakes"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:onClick="popup"
        android:text="@string/brakes"
        android:textColor="#040000"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/sparkPlugs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oilChange_button" />

    <Button

        android:id="@+id/tireChange"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:onClick="popup"
        android:text="@string/tire_change"
        android:textColor="#000000"
        app:backgroundTint="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/tireRotation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sparkPlugs" />


    <Button
        android:id="@+id/oilChange_button"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginTop="237dp"
        android:layout_marginBottom="12dp"
        android:onClick="popup"
        android:text="@string/oil_change"
        android:textColor="#000000"
        app:backgroundTint="#FFEB3B"

        app:layout_constraintBottom_toTopOf="@+id/brakes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="189dp"
        android:layout_height="381dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="@+id/brakes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/carminder_logo"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/tire_stack"
        android:layout_width="499dp"
        android:layout_height="434dp"
        android:layout_marginTop="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/tire_stack"
        android:contentDescription="@string/tirestack" />


</androidx.constraintlayout.widget.ConstraintLayout>